gloo-all/70-rate-limiting/default-vs-rate-limit.yaml
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: default
  namespace: gloo-system
spec:
  sslConfig:
    secretRef:
      name: ceposta-gloo-demo-dns
      namespace: gloo-system
  virtualHost:
    domains:
    - 'ceposta-gloo-demo.solo.io'
    routes:
    - matchers:
      - prefix: /httpbin
      routeAction:
        single:
          upstream:
            name: httpbin-static
            namespace: gloo-system 
      options:
        prefixRewrite: '/headers'             
    - matchers:
      - prefix: /
      routeAction:
        single:
          upstream:
            name: default-web-api-8080
            namespace: gloo-system
    options:
      rateLimitConfigs:
        refs:
        - name: global-limit
          namespace: gloo-system
